# harmonic_oscillator

./: CMakeLists.txt  Jacobi_method.cpp  main.cpp
